# gottagofaster

./: Cargo.toml  flake.nix
.cargo/: config.toml
assets/: autumn.glb  autumn_collisions.glb  map2.glb  pad.glb  up.glb  urban.glb
blender/: pad.blend  simple_map.blend  up.blend  up2.blend
maps/: autumn  autumn_test  map1  map2  up  urban  winter  winter.replay
src/: assets.rs  audio.rs  camera.rs  character_controller.rs  checkpoint.rs  debug.rs  environment.rs  events.rs  ghost.rs  input.rs  jumppad.rs  leaderboard.rs  lib.rs  main.rs  map.rs  physics.rs  player.rs  scene.rs  timing.rs  ui.rs  vfx.rs
